--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ function sharedata(){
   if('serviceWorker' in navigator ){
     window.addEventListener('load', async ()=>{
       try{
-    registration = await navigator.serviceWorker.register('seiiir.js')
+    registration = await navigator.serviceWorker.register('ser.js')
 
     console.log(`service worker registered and service worker is ${registration.scope}`);
 }catch(e){
@@ -260,5 +260,5 @@ function sharedata(){
 
 
 
-<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.3594f685fa4e5ddaa87f.js" type="module"></script><script src="main-es5.3594f685fa4e5ddaa87f.js" nomodule defer></script></body>
+<script src="runtime-es2015.c5fa8325f89fc516600b.js" type="module"></script><script src="runtime-es5.c5fa8325f89fc516600b.js" nomodule defer></script><script src="polyfills-es5.3e8196928d184a6e5319.js" nomodule defer></script><script src="polyfills-es2015.5b10b8fd823b6392f1fd.js" type="module"></script><script src="main-es2015.c0e17810dd4e0c9f2d03.js" type="module"></script><script src="main-es5.c0e17810dd4e0c9f2d03.js" nomodule defer></script></body>
 </html>
